# poly_enum

./: .gitignore  Cargo.toml  LICENSE.md  README.md
derive/: Cargo.toml
derive/src/: attr_proc.rs  derive.rs  interface.rs  lib.rs  util.rs
src/: lib.rs
tests/: deprecated_basic.rs  deprecated_elements.rs  deprecated_generic.rs  deprecated_lifetime.rs  deprecated_named.rs  deprecated_propagate_derive.rs  deprecated_self.rs  deprecated_tuple.rs  deprecated_where_clause.rs  depricated_basic.rs  depricated_propagate_derive.rs  depricated_self.rs  depricated_tuple.rs  elements.rs  generic.rs  lifetime.rs  self.rs  tuple.rs
