[package]
name = "poly_enum"
version = "0.1.0"
authors = ["Jesse Mazis <recursiveowl@gmail.com>"]
categories = ["rust-patterns"]
description = "Hierarchical polymorphism with enums"
include = ["/derive/**", "/Cargo.toml", "/src/**", "/tests/**"]
keywords = ["enum", "polymorphism"]
license = "Apache-2.0"
repository = "https://github.com/jesmaz/poly_enum"
edition = "2024"

[workspace]
members = ["derive"]
resolver = "2"

[dependencies]
poly_enum_derive = {path = "derive", version = "0.1"}
