[package]
name = "poly_enum_derive"
authors = ["Jesse Mazis <recursiveowl@gmail.com>"]
description = "Proc macro helper crate for poly_enum"
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/jesmaz/poly_enum"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
